--- a/src/code/Project/Pasantes.Website/Views/ImageList.cshtml
+++ b/src/code/Project/Pasantes.Website/Views/ImageList.cshtml
@@ -8,17 +8,42 @@
 else
 {
     <h1>@Model.Title</h1>
-    foreach (var image in Model.Images)
-    {
 
-        <div class="gallery">
-            <a target="_blank" href="@image.Link.Url">
-                <img src="@image.Image.Src" alt="Cinque Terre" width="600" height="400">
-            </a>
-            <div class="desc">@image.Description</div>
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+
+            @foreach (var image in Model.Images)
+            {
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="@image.Image.Src" alt="Second slide">
+                </div>
+
+
+
+                @*<a href="@image.Link.Url" class="swpe-card swpe-card--simplified" target="_blank">
+                    <div class="swpe-card__image-wrapper swpe-card__image-wrapper--tall swpe-image">
+                        <img src="" alt="two sharks swim in opposite directions in deep water">
+                    </div>
+                    <div class="swpe-card__content-container">
+                        <h3 class="swpe-font swpe-font-h5 swpe-font--med">
+                            @image.Description
+                        </h3>
+
+
+                    </div>
+                </a>*@
+            }
+
         </div>
-
-    }
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
 
 
 }
