--- a/src/code/Project/Pasantes.Website/Views/ImageList.cshtml
+++ b/src/code/Project/Pasantes.Website/Views/ImageList.cshtml
@@ -1,6 +1,11 @@
 ﻿@model Pasantes.Website.Models.ImageList
 
-
+<style>
+    .image-list {
+        overflow-x: auto;
+        white-space: nowrap;
+    }
+</style>
 @if (Model == null || Model.Images == null)
 {
     <h3>No data source found!</h3>
@@ -9,41 +14,31 @@ else
 {
     <h1>@Model.Title</h1>
 
-    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-
+    <div class="container">
+        <div class="row">
             @foreach (var image in Model.Images)
             {
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="@image.Image.Src" alt="Second slide">
+
+                <div class="col">
+                    <img src="@image.Image.Src" class="img-fluid" alt="Image 1" width="200">
                 </div>
+                
+        @*<a href="@image.Link.Url" class="swpe-card swpe-card--simplified" target="_blank">
+                <div class="swpe-card__image-wrapper swpe-card__image-wrapper--tall swpe-image">
+                    <img src="" alt="two sharks swim in opposite directions in deep water">
+                </div>
+                <div class="swpe-card__content-container">
+                    <h3 class="swpe-font swpe-font-h5 swpe-font--med">
+                        @image.Description
+                    </h3>
 
 
-
-                @*<a href="@image.Link.Url" class="swpe-card swpe-card--simplified" target="_blank">
-                    <div class="swpe-card__image-wrapper swpe-card__image-wrapper--tall swpe-image">
-                        <img src="" alt="two sharks swim in opposite directions in deep water">
-                    </div>
-                    <div class="swpe-card__content-container">
-                        <h3 class="swpe-font swpe-font-h5 swpe-font--med">
-                            @image.Description
-                        </h3>
-
-
-                    </div>
-                </a>*@
-            }
-
+                </div>
+            </a>*@
+    }
+</div>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
-    </div>
 
 
-}
+
+            }
